@@ -1,3 +1,7 @@
+2009-07-28  TOMITA Masahiro  <tommy@tmtm.org>
+
+	* lib/mysql.rb, lib/mysql/protocol.rb: add Mysql#list_fields.
+
 2009-07-27  TOMITA Masahiro  <tommy@tmtm.org>
 
 	* lib/mysql.rb, lib/mysql/protocol.rb: performance tuning
